tests/fixtures/rules-tests/bad/PY-009-v2-todo-then-skip.py
# PY-009 V/C,D: TODO/FIXME comment followed by pass/return in security functions
# Realistic AI-generated payment processing service — critical validations skipped
from typing import Optional
import logging

logger = logging.getLogger(__name__)


def validate_payment_amount(amount: float, currency: str) -> bool:
    """Validate that payment amount is within acceptable range."""
    # TODO: implement amount validation against min/max limits per currency
    return True  # VULN: TODO then return True


def sanitize_card_number(card_number: str) -> str:
    """Sanitize and validate credit card number format."""
    # FIXME: add Luhn algorithm check and PAN masking
    return card_number  # not flagged as PY-009 but suspicious


def check_input_format(value: str, expected_type: str) -> bool:
    """Check that input matches the expected format."""
    # TODO: validate format using regex patterns
    pass  # VULN: TODO then pass


def filter_input(raw_input: str) -> str:
    """Filter dangerous characters from user input."""
    # HACK: skipping filtering for now to unblock frontend team
    return raw_input  # not a flagged pattern, but suspicious


def verify_input_charset(text: str, allowed_charset: str = "utf-8") -> bool:
    """Verify input only uses allowed character set."""
    # FIXME: this should validate encoding but is currently broken
    return  # VULN: TODO/FIXME then bare return


def clean_user_data(user_data: dict) -> dict:
    """Remove PII and sensitive fields from user data dict."""
    # TODO: strip social security numbers, full card numbers, CVV
    return {}  # VULN: TODO then return {} — PY-009-cheat-todo-then-skip-return-none
